	* optimized disk cache to work with large caches
	* support variable number of optimistic unchoke slots and to dynamically
	  adjust based on the total number of unchoke slots
	* support for BitTyrant choker algorithm
	* support for automatically start torrents when they receive an
	  incoming connection
	* added more detailed instrumentation of the disk I/O thread

	* fix python deadlock when using python extensions
	* fixed small memory leak in DHT

0.15.9 release

	* added some functions missing from the python binding
	* fixed rare piece picker bug
	* fixed invalid torrent_status::finished_time
	* fixed bugs in dont-have and upload-only extension messages
	* don't open files in random-access mode (speeds up hashing)

0.15.8 release

	* allow NULL to be passed to create_torrent::set_comment and create_torrent::set_creator
	* fix UPnP issue for routers with multiple PPPoE connections
	* fix issue where event=stopped announces wouldn't be sent when closing session
	* fix possible hang in file::readv() on windows
	* fix CPU busy loop issue in tracker announce logic
	* honor IOV_MAX when using writev and readv
	* don't post 'operation aborted' UDP errors when changing listen port
	* fix tracker retry logic, where in some configurations the next tier would not be tried
	* fixed bug in http seeding logic (introduced in 0.15.7)
	* add support for dont-have extension message
	* fix for set_piece_deadline
	* add reset_piece_deadline function
	* fix merkle tree torrent assert

0.15.7 release

	* exposed set_peer_id to python binding
	* improve support for merkle tree torrent creation
	* exposed comparison operators on torrent_handle to python
	* exposed alert error_codes to python
	* fixed bug in announce_entry::next_announce_in and min_announce_in
	* fixed sign issue in set_alert_mask signature
	* fixed unaligned disk access for unbuffered I/O in windows
	* support torrents whose name is empty
	* fixed connection limit to take web seeds into account as well